<?xml version="1.0" encoding="utf-8"?>
<!-- DEUTSCH: Reihenfolge und Umfang wie in der iOS-App, damit sich beide
     Apps gleich anfuehlen: Anlaesse, Organisator, Profil, Einstellungen. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_event"
        android:title="@string/nav_events" />
    <item
        android:id="@+id/nav_organizer"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_organizer" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
